@@ -30,11 +30,9 @@
                 {% endif %}
                 {{ form.hidden_tag() }}
                 <div class="form-group input-group {{ 'has-error' if form.name.errors }}">
-                    <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
                     {{form.name(class="form-control", placeholder="Aquarium Name")}}
                 </div>
                 <div class="form-group input-group {{ 'has-error' if form.location.errors }}">
-                    <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
                     {{form.location(class="form-control", placeholder="Aquarium Location")}}
                 </div>
                 <div class="form-group">
