@@ -12,5 +12,7 @@ created an anonymous user class
 fixed the waterchange counts showing all aquariums
 fixed the feedings count to not need a call to the Users table
 added logging when not in debug mode
-//add pagination to the waterchange, feeding, temperature pages
+added pagination to the waterchange, feeding, temperature pages
 //convert to flask blueprints
+fixed the flash messages
+made it so newly created users are logged in
